# trace-light

./: .copier-answers.yml  .pre-commit-config.yaml  NOTICE  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  deploy_notebook.yml
examples/: 4f_interactive.py  4f_raytrace.py  na_demo.py
golden/: generate_ray_coords.py
licenses/: optiland_license.txt
plans/: IMPLEMENTATION_PLAN copy.md  IMPLEMENTATION_PLAN.md
src/optisketch/: __init__.py  fluorescence.py  kernels.py  lenses.py  optimize.py  rays.py  sources.py  systems.py  viz.py
src/optisketch/analysis/: __init__.py  image_sim.py  irradiance.py  psf.py  spot.py
src/optisketch/backends/: __init__.py  _jax.py  _numpy.py
src/trace_light/: __init__.py  fluorescence.py  kernels.py  lenses.py  optimize.py  rays.py  sources.py  systems.py  viz.py
src/trace_light/analysis/: __init__.py  image_sim.py  irradiance.py  psf.py  spot.py
src/trace_light/backends/: __init__.py  _jax.py  _numpy.py  _protocol.py
tests/: conftest.py  helpers.py  test_analysis.py  test_backends.py  test_fluorescence.py  test_image_sim.py  test_kernels.py  test_lenses.py  test_optimize.py  test_sources.py  test_systems.py  test_trace_and_spacing.py  test_trace_light.py  test_viz.py
